@@ -2,6 +2,12 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  [API CHANGE]
+
+    * method_names now takes an optional list of operators; the options
+    hash is now passed as an optional trailing hashref
+
+
 0.02      2017-01-17 10:12:51-05:00 America/New_York (TRIAL RELEASE)
 
   [BUG FIX]
